tests/baselines/reference/extension.errors.txt
==== tests/cases/compiler/extension.ts (5 errors) ====
    interface I {
        x;
    }
    
    interface I {
        y;
    }
    
    declare module M {
        export class C {
            public p:number;
        }
    }
    
    declare module M {
        export extension class C {
        ~~~~~~
!!! error TS1128: Declaration or statement expected.
                         ~~~~~
!!! error TS1005: ';' expected.
               ~~~~~~~~~
!!! error TS2304: Cannot find name 'extension'.
                               ~
!!! error TS2300: Duplicate identifier 'C'.
            public pe:string;
        }
    }
    
    var c=new M.C();
    c.pe;
      ~~
!!! error TS2339: Property 'pe' does not exist on type 'C'.
    c.p;
    var i:I;
    i.x;
    i.y;
    
    